<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Jawa Songs</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="inter">ca-app-pub-3940256099942544/1033173712</string>


    <string name="maxsdkkey">ARrHo4SIPy7zHFKkFMtA8ol_k7XAnaMTFnAU9P8WsTwK2Rr-P9A-vOwmwiTEgXdZnbyWXBzdQdo6kqRkwSuWVH</string>
    <string name="maxinter">e8abad72eaadfd32</string>
    <string name="maxbanner">43d27714b12af147</string>


    <string name="openads">ca-app-pub-3940256099942544/3419835294</string>
    <string name="url_json">http://bangburnek.com/json/2020/02/jawasongs/</string>
    <string name="app_version">Copyright @2020</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_play">Music Player</string>
    <string name="app_label">Music</string>
    <string name="nullTime">--:--</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="typeToSearch">Type to search music</string>
    <string name="put_music_player_on_automatic_sleep_">Put Music Player on Automatic Sleep?</string>
    <string name="music_player_will_automatically_stop_playback_after_your_given_time_please_insert_the_time_in_minutes_below_">Music Player will automatically stop playback after your given time.</string>
    <string name="done">DONE</string>
    <string name="cancel">DISMISS</string>
    <string name="no_song_available_">Add Music to Play</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_7">7</string>
    <string name="_4">4</string>
    <string name="_1">1</string>
    <string name="min">mins</string>
    <string name="sleep_in">Sleep in</string>
    <string name="play_some_music">Play Some Music</string>
    <string name="latest_added_to_library">LATEST ADDED TO LIBRARY</string>
    <string name="search">Search</string>
    <string name="PLAYING">PLAYING</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="title_activity_settings">Settings</string>
    <string name="close">Close</string>
    <string name="drive_mode">Drive Mode</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="song_info">Song Info</string>
    <string name="save_current_playlist">Save Current Playlist</string>
    <string name="equalizer">Equalizer</string>
    <string name="unknown_album">unknown album</string>
    <string name="unknown_artist">unknown artist</string>
    <string name="current_sleep_timer">Current Sleep Timer</string>
    <string name="sleeps_at_3_00am">Sleeps at 3:00am</string>
    <string name="created_playlists">Created Playlists</string>
    <string name="album_cap">ALBUM</string>
    <string name="auto_plalist_cap">AUTO-PLAYLIST</string>
    <string name="artist_cap">ARTIST</string>
    <string name="recently_added_cap">RECENTLY ADDED</string>
    <string name="playlist_cap">PLAYLIST</string>
    <string name="set_suffle">Set Shuffle</string>

</resources>
