<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:background="@color/dialogBackground"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/albumArtImageView"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:background="@drawable/audio_drawable"
        android:contentDescription="@string/app_label"
        android:scaleType="centerCrop"
        android:src="@drawable/app_play" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/audio_drawable"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:maxLines="1"
            android:text="@string/app_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/albumTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleTextView"
            android:layout_alignStart="@+id/titleTextView"
            android:layout_toStartOf="@+id/lin"
            android:maxLines="1"
            android:text="@string/album"
            android:textColor="@color/whiteOpaque" />

        <TextView
            android:id="@+id/artistTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/albumTextView"
            android:layout_alignStart="@+id/titleTextView"
            android:layout_toStartOf="@+id/lin"
            android:maxLines="1"
            android:text="@string/artist"
            android:textColor="@color/whiteOpaque" />

        <LinearLayout
            android:id="@+id/lin"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="2dp"
            android:weightSum="3">

            <ImageView
                android:id="@+id/prevImageView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_label"
                android:padding="11dp"
                android:rotation="180"
                android:src="@drawable/app_next"
                android:tint="@color/white" />

            <ImageView
                android:id="@+id/playImageView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_label"
                android:padding="8dp"
                android:src="@drawable/app_play"
                android:tint="@color/white" />

            <ImageView
                android:id="@+id/nextImageView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_label"
                android:padding="11dp"
                android:src="@drawable/app_next"
                android:tint="@color/white" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>